# mcp-youtube-summary

./: .env.example  CHANGES_SUMMARY.md  CLIENT_GUIDE.md  DEVELOPMENT.md  FASTMCP_REFACTORING.md  FIXES.md  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  README_SSE_CLIENT.md  TEST_RESULTS.md  USE_CLIENT.md  client.py  client_gemini_working.py  client_sse_gemini.py  pyproject.toml  requirements.txt  simple_client.py  test_sse_connection.py
tests/: __init__.py  test_config_manager.py  test_metadata_extractor.py  test_summary_generator.py  test_transcript_retriever.py
youtube_summary_mcp/: __init__.py  asgi.py  config_manager.py  main.py  main_sse.py  metadata_extractor.py  server.py  server_sse.py  summary_generator.py  transcript_retriever.py
youtube_summary_mcp/llm/: client_gemini.py  gemini_llm_factory.py  google_embedding_factory.py
