[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-summary-mcp"
version = "0.1.0"
description = "MCP server for summarizing YouTube videos"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["mcp", "youtube", "summarization"]

dependencies = [
    "mcp>=0.1.0",
    "youtube-transcript-api>=0.6.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "nltk==3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

nlp = [
    "nltk==3.7.0",
    "spacy>=3.0.0",
]

[project.scripts]
youtube-summary-mcp = "youtube_summary_mcp.main:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
